// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Brick /> should render a Brick with default values 1`] = `
<styled.span
  color="#F5F7FA"
  data-component-type="brick"
>
  <Text
    color="#262D33"
    isInline={true}
    tag="span"
    type="body"
  >
    Test
  </Text>
</styled.span>
`;

exports[`<Brick /> should render a Brick with the alert color 1`] = `
<styled.span
  color="#FFF1F0"
  data-component-type="brick"
>
  <Text
    color="#B30F00"
    isInline={true}
    tag="span"
    type="body"
  >
    Test
  </Text>
</styled.span>
`;

exports[`<Brick /> should render a Brick with the heading typography 1`] = `
<styled.span
  color="#F5F7FA"
  data-component-type="brick"
>
  <Text
    color="#262D33"
    isInline={true}
    tag="span"
    type="heading"
  >
    Test
  </Text>
</styled.span>
`;
